--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                     <i class="fas fa-book-open"></i>
                     <h1>Mój Dziennik Życia</h1>
                 </div>
+                <div class="header-search">
+                    <div class="search-container">
+                        <input type="text" id="globalSearch" placeholder="Szukaj wpisów, celów, tagów...">
+                        <button id="searchBtn"><i class="fas fa-search"></i></button>
+                    </div>
+                    <div id="searchResults" class="search-results"></div>
+                </div>
                 <div class="header-stats">
                     <div class="stat-item">
                         <span class="stat-number" id="totalDays">0</span>
@@ -42,22 +49,52 @@
                     <li class="nav-item active" data-page="today">
                         <i class="fas fa-calendar-day"></i>
                         <span>Dziś</span>
+                        <span class="nav-shortcut">Alt+1</span>
                     </li>
                     <li class="nav-item" data-page="history">
                         <i class="fas fa-history"></i>
                         <span>Historia</span>
+                        <span class="nav-shortcut">Alt+2</span>
                     </li>
                     <li class="nav-item" data-page="goals">
                         <i class="fas fa-bullseye"></i>
                         <span>Cele</span>
+                        <span class="nav-shortcut">Alt+3</span>
                     </li>
                     <li class="nav-item" data-page="statistics">
                         <i class="fas fa-chart-line"></i>
                         <span>Statystyki</span>
+                        <span class="nav-shortcut">Alt+4</span>
                     </li>
                     <li class="nav-item" data-page="insights">
                         <i class="fas fa-lightbulb"></i>
                         <span>Wnioski</span>
+                        <span class="nav-shortcut">Alt+5</span>
+                    </li>
+                    <li class="nav-item" data-page="achievements">
+                        <i class="fas fa-trophy"></i>
+                        <span>Osiągnięcia</span>
+                        <span class="nav-shortcut">Alt+6</span>
+                    </li>
+                    <li class="nav-item" data-page="challenges">
+                        <i class="fas fa-fire"></i>
+                        <span>Wyzwania</span>
+                        <span class="nav-shortcut">Alt+7</span>
+                    </li>
+                    <li class="nav-item" data-page="habits">
+                        <i class="fas fa-repeat"></i>
+                        <span>System Nawyków</span>
+                        <span class="nav-shortcut">Alt+8</span>
+                    </li>
+                    <li class="nav-item" data-page="heatmap">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Heatmapa Roku</span>
+                        <span class="nav-shortcut">Alt+9</span>
+                    </li>
+                    <li class="nav-item" data-page="productivity">
+                        <i class="fas fa-chart-area"></i>
+                        <span>Produktywność vs Nastrój</span>
+                        <span class="nav-shortcut">Alt+0</span>
                     </li>
                 </ul>
             </nav>
@@ -255,6 +292,161 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Achievements Page -->
+                <section id="achievements-page" class="page">
+                    <div class="page-header">
+                        <h2>Osiągnięcia i odznaki</h2>
+                    </div>
+                    <div class="achievements-overview">
+                        <div class="user-stats">
+                            <div class="level-badge">
+                                <div class="level-circle">
+                                    <span class="level-number" id="userLevel">1</span>
+                                </div>
+                                <div class="level-info">
+                                    <h3>Poziom <span id="userLevelText">1</span></h3>
+                                    <div class="progress-bar">
+                                        <div class="progress-fill" id="levelProgress"></div>
+                                    </div>
+                                    <p><span id="currentXP">0</span> / <span id="nextLevelXP">100</span> XP</p>
+                                </div>
+                            </div>
+                            <div class="stats-summary">
+                                <div class="stat-item">
+                                    <span class="stat-number" id="totalPoints">0</span>
+                                    <span class="stat-label">Punkty</span>
+                                </div>
+                                <div class="stat-item">
+                                    <span class="stat-number" id="totalBadges">0</span>
+                                    <span class="stat-label">Odznaki</span>
+                                </div>
+                                <div class="stat-item">
+                                    <span class="stat-number" id="currentStreak">0</span>
+                                    <span class="stat-label">Seria dni</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievements-content">
+                        <div class="achievements-section">
+                            <h3>Zdobyte odznaki</h3>
+                            <div class="badges-grid" id="earnedBadges"></div>
+                        </div>
+                        <div class="achievements-section">
+                            <h3>Odblokowane osiągnięcia</h3>
+                            <div class="achievements-list" id="unlockedAchievements"></div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Challenges Page -->
+                <section id="challenges-page" class="page">
+                    <div class="page-header">
+                        <h2>Wyzwania i misje</h2>
+                    </div>
+                    <div class="challenges-content">
+                        <div class="daily-challenge">
+                            <h3><i class="fas fa-calendar-day"></i> Wyzwanie dnia</h3>
+                            <div class="challenge-card" id="dailyChallengeCard"></div>
+                        </div>
+                        <div class="weekly-challenges">
+                            <h3><i class="fas fa-calendar-week"></i> Wyzwania tygodnia</h3>
+                            <div class="challenges-grid" id="weeklyChallenges"></div>
+                        </div>
+                        <div class="special-challenges">
+                            <h3><i class="fas fa-star"></i> Wyzwania specjalne</h3>
+                            <div class="challenges-grid" id="specialChallenges"></div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Habits Page -->
+                <section id="habits-page" class="page">
+                    <div class="page-header">
+                        <h2>System Nawyków</h2>
+                        <button class="btn-primary" onclick="journal.addNewHabit()">
+                            <i class="fas fa-plus"></i> Dodaj nawyk
+                        </button>
+                    </div>
+                    <div class="habits-content">
+                        <div class="habits-overview">
+                            <div class="stats-summary">
+                                <div class="stat-card">
+                                    <h3>Aktywne nawyki</h3>
+                                    <p id="activeHabitsCount">0</p>
+                                </div>
+                                <div class="stat-card">
+                                    <h3>Ukończone dzisiaj</h3>
+                                    <p id="completedTodayCount">0</p>
+                                </div>
+                                <div class="stat-card">
+                                    <h3>Najdłuższa seria</h3>
+                                    <p id="longestStreak">0 dni</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="habits-list" id="habitsList"></div>
+                    </div>
+                </section>
+
+                <!-- Heatmap Page -->
+                <section id="heatmap-page" class="page">
+                    <div class="page-header">
+                        <h2>Heatmapa Roku</h2>
+                        <div class="year-selector">
+                            <select id="heatmapYear"></select>
+                        </div>
+                    </div>
+                    <div class="heatmap-content">
+                        <div class="heatmap-legend">
+                            <span>Mniej aktywny</span>
+                            <div class="legend-colors">
+                                <div class="legend-color level-0"></div>
+                                <div class="legend-color level-1"></div>
+                                <div class="legend-color level-2"></div>
+                                <div class="legend-color level-3"></div>
+                                <div class="legend-color level-4"></div>
+                            </div>
+                            <span>Bardziej aktywny</span>
+                        </div>
+                        <div class="heatmap-container">
+                            <div class="heatmap-months" id="heatmapMonths"></div>
+                            <div class="heatmap-grid" id="heatmapGrid"></div>
+                        </div>
+                        <div class="heatmap-stats">
+                            <p>Łączna aktywność: <strong id="totalActivityDays">0</strong> dni</p>
+                            <p>Aktualna seria: <strong id="currentStreak">0</strong> dni</p>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Productivity vs Mood Page -->
+                <section id="productivity-page" class="page">
+                    <div class="page-header">
+                        <h2>Produktywność vs Nastrój</h2>
+                        <div class="period-selector">
+                            <select id="productivityPeriod">
+                                <option value="7">Ostatnie 7 dni</option>
+                                <option value="30">Ostatnie 30 dni</option>
+                                <option value="90">Ostatnie 90 dni</option>
+                                <option value="365">Ostatni rok</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="productivity-content">
+                        <div class="chart-container">
+                            <canvas id="productivityMoodChart"></canvas>
+                        </div>
+                        <div class="correlation-stats">
+                            <h3>Korelacja</h3>
+                            <div class="correlation-value">
+                                <span id="correlationCoefficient">0.00</span>
+                                <p id="correlationInterpretation"></p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
     </div>
@@ -264,6 +456,31 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div id="modalBody"></div>
+        </div>
+    </div>
+
+    <!-- Notification Toast -->
+    <div id="notificationToast" class="notification-toast">
+        <div class="notification-content">
+            <i class="notification-icon"></i>
+            <span class="notification-text"></span>
+        </div>
+        <button class="notification-close">&times;</button>
+    </div>
+
+    <!-- Level Up Modal -->
+    <div id="levelUpModal" class="modal">
+        <div class="modal-content level-up-content">
+            <div class="level-up-animation">
+                <div class="level-up-icon">🎉</div>
+                <h2>Awansowałeś!</h2>
+                <p>Osiągnąłeś poziom <span id="newLevel"></span>!</p>
+                <div class="rewards">
+                    <p>Nagrody:</p>
+                    <ul id="levelRewards"></ul>
+                </div>
+                <button class="btn-primary" onclick="journal.closeLevelUpModal()">Super!</button>
+            </div>
         </div>
     </div>
 
